@@ -1,3 +1,10 @@
+2012-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-scroll-left, w3m-scroll-right): Use image-mode function
+	for an image.
+	(w3m-shift-left, w3m-shift-right): Pass prefix argument to image-mode
+	function.
+
 2012-03-12  Dan Jacobson  <jidanni@jidanni.org>
 
 	* w3m.el (w3m-ctl-c-map): Bind `C-c C-e' to w3m-goto-new-session-url.
